--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -978,7 +978,7 @@
                 type: 'area',
                 name: 'ReTweets',
                 color: '#FF0000',
-                pointInterval: 10 * 60 * 1000,
+                pointInterval: 20 * 1000,
                 pointStart: Date.UTC(2013, 3, 05, 20, 06, 00, 0),
                 data: retweetNewData
             }]
